--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,8 @@
 @import "scss/socialLinks";
 @import "scss/skills";
 
+@import "scss/resume";
+
 body {
     background-color: #f5f5f5;
     padding: 50px 0 40px 0;
