--- a/src/scss/_resume.scss
+++ b/src/scss/_resume.scss
@@ -11,8 +11,13 @@
         font-size: 18px;
     }
 
-    .wrapper {
+    .resume-items {
         padding-left: 25px;
+        margin-bottom: 30px;
+
+        &:last-of-type {
+            margin-bottom: 0;
+        }
 
         .resume-item {
             border-left: 2px solid #e5e5e5;
@@ -20,6 +25,14 @@
 
             &:first-child {
                 padding-top: 50px;
+            }
+
+            &:last-child:not(:first-child) {
+                border-left: 0;
+
+                h2::after {
+                    margin-left: -34px;
+                }
             }
 
             h2 {
