made info list responsive

--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -40,7 +40,7 @@
         }
 
         p {
-            color: #7f7f7f;
+            color: $light-grey;
             line-height: 24px;
             font-size: 14px;
 
