--- a/src/scss/_infoList.scss
+++ b/src/scss/_infoList.scss
@@ -6,13 +6,26 @@
     flex-wrap: wrap;
 
     li {
-        flex: 33.3333%;
-        max-width: 33.3333%;
+        flex: 100%;
         font-size: 14px;
         color: $light-grey;
 
         span {
-            color: $text-color;
+            color: #212529;
         }
+    }
+}
+
+@media (min-width: $small-min-width) {
+    .r-info-list li {
+        flex: 50%;
+        max-width: 50%;
+    }
+}
+
+@media (min-width: $large-min-width) {
+    .r-info-list li {
+        flex: 33.3333%;
+        max-width: 33.3333%;
     }
 }
