--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,6 +1,11 @@
 $primary: #00b2ed;
 $secondary: #243c4f;
-$light-grey: #333;
+$light-grey: #7f7f7f;
 $text-color: $secondary;
 $box-padding: 25px 30px;
 $border-color: #ccc;
+
+$small-min-width: 540px;
+$medium-min-width: 720px;
+$large-min-width: 960px;
+$extra-large-min-width: 1140px;
