--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@
 
 body {
     background-color: #f5f5f5;
-    padding: 50px 0 40px 0;
+    padding: 0 0 40px 0;
 }
 
 h1,
@@ -48,9 +48,9 @@ p {
 }
 
 .r-shadow {
-    -webkit-box-shadow: -2px -1px 88px 0px rgba(0, 0, 0, 0.17);
-    -moz-box-shadow: -2px -1px 88px 0px rgba(0, 0, 0, 0.17);
-    box-shadow: -2px -1px 88px 0px rgba(0, 0, 0, 0.17);
+    -webkit-box-shadow: -2px -1px 40px 0px rgba(0, 0, 0, 0.17);
+    -moz-box-shadow: -2px -1px 40px 0px rgba(0, 0, 0, 0.17);
+    box-shadow: -2px -1px 40px 0px rgba(0, 0, 0, 0.17);
 }
 
 #services {
@@ -84,5 +84,21 @@ p {
             line-height: 20px;
             font-size: 16px;
         }
+    }
+}
+
+#profile {
+    margin-bottom: 30px;
+    position: relative;
+    z-index: 5;
+}
+
+@media (min-width: $medium-min-width) {
+    #profile {
+        margin-bottom: 0;
+    }
+
+    body {
+        padding: 50px 0 40px 0;
     }
 }
