Added new projects page with new setTitle util

--- a/src/App.scss
+++ b/src/App.scss
@@ -98,3 +98,33 @@ p {
         padding: 50px 0 40px 0;
     }
 }
+
+#projects {
+    .card {
+        .card-header {
+            padding: 15px 20px;
+        }
+
+        .card-body {
+            padding: 15px 20px;
+            font-size: 13px;
+        }
+
+        .card-footer {
+            padding: 15px 20px;
+
+            a {
+                font-size: 13px;
+            }
+
+            span.badge {
+                margin-left: 5px;
+                background-color: $secondary;
+
+                :first-of-type {
+                    margin-left: 0;
+                }
+            }
+        }
+    }
+}
