One giant commit to add a dark theme!

--- a/src/scss/_infoList.scss
+++ b/src/scss/_infoList.scss
@@ -8,10 +8,10 @@
     li {
         flex: 100%;
         font-size: 14px;
-        color: $light-grey;
+        color: $text-color-light;
 
         span {
-            color: #212529;
+            color: $text-color-dark;
         }
     }
 }
