--- a/src/scss/_resume.scss
+++ b/src/scss/_resume.scss
@@ -3,7 +3,7 @@
         width: 55px;
         text-align: center;
         padding: 18px 0;
-        color: #fff;
+        color: $text-color-3;
         -webkit-border-radius: 50px;
         -moz-border-radius: 50px;
         border-radius: 50px;
@@ -49,7 +49,7 @@
                     -moz-border-radius: 50px;
                     border-radius: 50px;
                     margin: 0 9px 0 -36px;
-                    background-color: $secondary;
+                    background-color: $text-color-3;
                 }
             }
 
