--- a/src/scss/_services.scss
+++ b/src/scss/_services.scss
@@ -14,7 +14,7 @@
             text-align: center;
             padding-top: 18px;
             float: left;
-            color: #fff;
+            color: $bg-light;
             font-size: 20px;
             margin-right: 10px;
         }
