--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -1,6 +1,7 @@
 .card {
-    border: 0;
-    border-radius: 0;
+    border: none;
+    border-radius: none;
+
     @extend .r-shadow;
 
     img {
@@ -8,7 +9,7 @@
     }
 
     .card-header {
-        background-color: #fff;
+        background-color: $bg-light;
         padding: $box-padding;
         border-bottom: 0;
 
@@ -29,7 +30,7 @@
     }
 
     .card-body {
-        background-color: #fff;
+        background-color: $bg-light;
         padding: $box-padding;
         border-top: 1px dashed $border-color;
 
@@ -40,7 +41,7 @@
         }
 
         p {
-            color: $light-grey;
+            color: $text-color-light;
             line-height: 24px;
             font-size: 14px;
 
@@ -50,7 +51,7 @@
         }
 
         &.grey {
-            background-color: #f7f7f7;
+            background-color: $bg-light-2;
             border-top: 0;
         }
 
@@ -65,7 +66,7 @@
     }
 
     .card-footer {
-        background-color: #fff;
+        background-color: $bg-light;
         padding: $box-padding;
         border-top: 1px dashed $border-color;
 
@@ -73,7 +74,7 @@
             margin-bottom: 0;
             text-align: center;
             font-size: 14px;
-            color: $light-grey;
+            color: $text-color-light;
         }
     }
 }
