--- a/src/scss/_navigation.scss
+++ b/src/scss/_navigation.scss
@@ -1,5 +1,5 @@
 nav.main-bar {
-    background-color: #fff;
+    background-color: $bg-light;
     margin-bottom: 30px;
     z-index: 10;
     position: relative;
@@ -20,7 +20,7 @@ nav.main-bar {
             a {
                 display: block;
                 padding: $box-padding;
-                color: $text-color;
+                color: $text-color-light;
                 font-family: "Oxygen", sans-serif;
                 font-weight: 600;
                 text-transform: uppercase;
@@ -42,7 +42,7 @@ nav.main-bar {
 }
 
 .mobile-bar {
-    background-color: #fff;
+    background-color: $bg-light;
     margin-bottom: 30px;
     display: flex;
 
@@ -59,7 +59,7 @@ nav.main-bar {
         button {
             border: 0;
             outline: 0;
-            background-color: #fff;
+            background-color: transparent;
             border: 1px solid $secondary;
             border-radius: 3px;
             color: $secondary;
@@ -68,7 +68,7 @@ nav.main-bar {
 
             &:hover {
                 background-color: $secondary;
-                color: #fff;
+                color: $bg-light;
             }
         }
     }
@@ -82,7 +82,7 @@ nav.main-bar {
     min-height: 100vh;
     width: 80%;
     margin-left: 20%;
-    background-color: #fff;
+    background-color: $bg-light;
     @extend .r-shadow;
 
     &.open {
@@ -99,7 +99,7 @@ nav.main-bar {
         button {
             border: 0;
             outline: 0;
-            background-color: #fff;
+            background-color: transparent;
             border: 1px solid $secondary;
             border-radius: 3px;
             color: $secondary;
@@ -108,7 +108,7 @@ nav.main-bar {
 
             &:hover {
                 background-color: $secondary;
-                color: #fff;
+                color: $bg-light;
             }
         }
     }
@@ -128,7 +128,7 @@ nav.main-bar {
 
                 a {
                     display: block;
-                    color: $light-grey;
+                    color: $text-color-light;
                     padding: 3px 0;
 
                     &:hover {
@@ -146,7 +146,7 @@ nav.main-bar {
 
         p {
             font-size: 14px;
-            color: $light-grey;
+            color: $text-color-light;
         }
     }
 }
