--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -7,6 +7,7 @@
         .card-body {
             padding: 15px 20px;
             font-size: 13px;
+            color: $text-color-dark;
         }
 
         .card-footer {
