--- a/src/scss/_socialLinks.scss
+++ b/src/scss/_socialLinks.scss
@@ -3,8 +3,8 @@
 
     a {
         font-size: 16px;
-        border: solid 1px #2a2a2a;
-        color: #2a2a2a;
+        border: solid 1px $text-color-dark;
+        color: $text-color-dark;
         border-radius: 50px;
         width: 34px;
         padding: 4px 0;
@@ -13,8 +13,8 @@
         text-align: center;
 
         &:hover {
-            color: #fff;
-            background-color: #2a2a2a;
+            color: $bg-light;
+            background-color: $text-color-dark;
         }
     }
 }
